<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.search.SearchStarshipsActivity">

    <TextView
        android:id="@+id/textViewNaveFavorita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/digite_sua_nave_favorita"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/textInputLayoutShip"
        app:layout_constraintEnd_toEndOf="@id/textInputLayoutShip"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutShip" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutShip"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editTextShip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ship"
            android:imeOptions="actionDone" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/procurar"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutShip"
        app:layout_constraintLeft_toLeftOf="@id/textInputLayoutShip"
        app:layout_constraintRight_toRightOf="@id/textInputLayoutShip"/>

</android.support.constraint.ConstraintLayout>