<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:id="@+id/textViewLabelNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/nome"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewValueNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelNome"
        app:layout_constraintEnd_toEndOf="@id/textViewLabelNome"
        app:layout_constraintStart_toStartOf="@id/textViewLabelNome"
        tools:text="nome"/>

    <TextView
        android:id="@+id/textViewLabelModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/modelo"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/textViewValueNome"
        app:layout_constraintEnd_toEndOf="@id/textViewLabelNome"
        app:layout_constraintStart_toStartOf="@id/textViewLabelNome"
        />

    <TextView
        android:id="@+id/textViewValueModelo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelModelo"
        app:layout_constraintEnd_toEndOf="@id/textViewLabelModelo"
        app:layout_constraintStart_toStartOf="@id/textViewLabelModelo"
        tools:text="modelo"/>

    <TextView
        android:id="@+id/textViewLabelFabricante"
        android:layout_width="wrap_content"
        android:layout_margin="20dp"
        android:layout_height="wrap_content"
        android:text="@string/fabricante"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/textViewValueModelo"
        app:layout_constraintEnd_toEndOf="@id/textViewLabelNome"
        app:layout_constraintStart_toStartOf="@id/textViewLabelNome"/>

    <TextView
        android:id="@+id/textViewValueFabricante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textViewLabelFabricante"
        app:layout_constraintEnd_toEndOf="@id/textViewLabelFabricante"
        app:layout_constraintStart_toStartOf="@id/textViewLabelFabricante"
        tools:text="fabricante"/>

</android.support.constraint.ConstraintLayout>